src/test/ui/consts/const-fn-not-safe-for-const.stderr
error[E0015]: cannot call non-const fn `random` in constant functions
  --> $DIR/const-fn-not-safe-for-const.rs:14:5
   |
LL |     random()
   |     ^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0013]: constant functions cannot refer to statics
  --> $DIR/const-fn-not-safe-for-const.rs:20:5
   |
LL |     Y
   |     ^
   |
   = help: consider extracting the value of the `static` to a `const`, and referring to that

error[E0013]: constant functions cannot refer to statics
  --> $DIR/const-fn-not-safe-for-const.rs:25:6
   |
LL |     &Y
   |      ^
   |
   = help: consider extracting the value of the `static` to a `const`, and referring to that

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0013, E0015.
For more information about an error, try `rustc --explain E0013`.
